--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,10 @@ body,
     margin: 0;
 }
 
+.enter-city{
+    color: white;
+}
+
 .main-container {
     background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.418)),
         url('https://images.pexels.com/photos/1118873/pexels-photo-1118873.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1');
